--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=Critter-Chronologer
 
+server.port=8082
+
 spring.datasource.url=jdbc:mysql://localhost:3306/critter
 spring.datasource.username=admin
 spring.datasource.password=admin
 
 spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
