--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.password=admin
 
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
