--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,11 @@
 spring.datasource.driver-class-name=org.h2.Driver
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:testDB
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=never
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
